# Dirijabl-Aga

./: CMakeLists.txt  README.md
Dirijabl/include/: camera.h  model.h
Dirijabl/src/: camera.cpp  main.cpp  model.cpp  shader.cpp
